--- a/en/index.html
+++ b/en/index.html
@@ -758,7 +758,7 @@
 							<div class="kittens__block">
 								<!-- SOCIAL -->
 								<div class="kittens__social social-kittens">
-									<h5 class="social-kittens__title">Join our family!</h5>
+									<h4 class="social-kittens__title">Join our family!</h4>
 
 									<div class="social-kittens__list">
 										<!-- facebook -->
@@ -2769,9 +2769,7 @@
 							<div class="kittens__block">
 								<!-- SOCIAL -->
 								<div class="kittens__social social-kittens">
-									<h5 class="social-kittens__title">
-										Subscribe and stay up&nbsp;to&nbsp;date.
-									</h5>
+									<h4 class="social-kittens__title">Subscribe and stay up&nbsp;to&nbsp;date.</h4>
 
 									<div class="social-kittens__list">
 										<!-- instagram -->
@@ -3408,9 +3406,7 @@
 							<div class="kittens__block">
 								<!-- SOCIAL -->
 								<div class="kittens__social social-kittens">
-									<h5 class="social-kittens__title">
-										Follow&nbsp;us on&nbsp;social media.
-									</h5>
+									<h4 class="social-kittens__title">Follow&nbsp;us on&nbsp;social media.</h4>
 
 									<div class="social-kittens__list">
 										<!-- facebook -->
